--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,6 @@
             </form>
         </main>
         
-        <script src="app.js"></script>
+        <script src="./app.js"></script>
     </body>
 </html>
